Update 5. 트리거를 통해 자동화 에이전트 기능 추가.md

--- a/커스텀엔진 에이전트 실습/5. 트리거를 통해 자동화 에이전트 기능 추가.md
+++ b/커스텀엔진 에이전트 실습/5. 트리거를 통해 자동화 에이전트 기능 추가.md
@@ -69,35 +69,16 @@
 ```
 아래 **참고 데이터**에 나열된 출장지 정보를 기반으로 해당 국가 정보를 분석하고, 메일 작성 규칙과 포멧에 따라 email 값에 입력된 주소로 메일을 발송합니다.  
 
-#메일 작성 규칙
- 메일 작성시에는 다음의 규칙을 따릅니다.
- - 반드시 HTML형식으로 작성합니다.
-- 각 단락마다 마크다운과 아이콘을 활용하여 시인성을 제공합니다.
-- 이미지인 flag_download_url, map_download_url, dang_map_download_url의 경우 가시성을 확보하기 위해 <img>태그와 Style을 이용하여 max-width: 100%, height: auto, borderRadius: '8p' 을 적용시켜서 렌더링 합니다.
- - 제목(Subject): ["출장 국가"] 사전 출장 정보 알림
- - 수신자(to): $email
- - 본문(subject) {
- - $displayname 에게 인사와 출장 목적에 대해 격려를 하는 메세지를 먼저 전달.
- 방문 국가에 대한 정보를 서술
- - 국기: 
-flag_download_url
- :  <img> 태그를 이용하여 이미지를 직접 렌더링 합니다. 
- - 국가정보
- - 위치: 
-map_download_url
- :  <img> 태그를 이용하여 이미지를 직접 렌더링 합니다.
- - 경제현황
- - 자연 재해
- - 사건 사고 유형 및 대처방안:
- - 유의해야 할 지역
- - 주요 피해 사례 요약
-- 위험지도: 
- dang_map_download_url 
-: <img> 태그를 이용하여 이미지를 직접 렌더링 합니다. 
- - 요약:  정리된 내용을 요약하고 여행의 안녕을 기원하는 메세지를 작성합니다.
-}
-
-참고 데이터: @{triggerBody()}
+# 메일 작성 규칙(HTML)
+- 본문은 HTML 형식. 마크다운 스타일을 HTML로 표현.
+- HTML 코드는 주변 레이아웃 디자인까지 포함하여 가시성과 시인성, 디자인 요소까지 포함해서 만들것
+- 이미지 렌더링 시 스타일은 표준 CSS 사용: style="max-width:100%; height:auto; border-radius:8px;"
+- 제목(Subject): ["출장 국가"] 사전 출장 정보 알림
+- 수신자(to): $email
+- 본문 내용:  
+- $displayname 에 대한 인사 및 격려  - 국가 정보 섹션(위의 출력 형식과 동일)
+- 면책 및 안전 고지(예: "본 메일은 참고용 일반 정보이며, 안전·의료·법률 조언이 아닙니다. 최신 정보와 지침은 현지 당국 및 외교부 공지를 확인하세요.")  
+- 요약 및 안부 인사
 ```
 
 <img width="1339" height="1148" alt="image" src="https://github.com/user-attachments/assets/646312a0-9558-425b-90f2-01ecdee6977d" />
