Update 2. 사내 데이터(쉐어포인트) 연결하기.md

--- a/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
+++ b/커스텀엔진 에이전트 실습/2. 사내 데이터(쉐어포인트) 연결하기.md
@@ -61,11 +61,11 @@ Copilot Studio에서 **참조자료(Reference)** 는 플로우 설계 시 외부
 
 <img width="1158" height="817" alt="image" src="https://github.com/user-attachments/assets/fd2afe41-77de-4f7b-9649-bec64f0d0967" />
 
-아래의 쉐어포인트 사이트 링크를 직접 입력하거나, 또는 찾아보기를 통해 **[국가코드정보.xlsx]** 파일을 선택합니다. <br> 
+찾아보기를 통해 **[국가코드정보.xlsx]** 파일을 선택하거나 아래의 쉐어포인트 사이트 링크를 직접 입력합니다. <br> 
 <br> 
-쉐어포인트 주소
+쉐어포인트 사이트 주소
 ```
-https://m365cpi45255191.sharepoint.com/sites/CopilotAgentPoC/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FCopilotAgentPoC%2FShared%20Documents%2F%EA%B5%AD%EA%B0%80%20%EC%A0%95%EB%B3%B4%20%EB%B6%84%EC%84%9D%20%EC%97%90%EC%9D%B4%EC%A0%84%ED%8A%B8%20%EC%9E%90%EB%A3%8C&viewid=246f247a%2D0867%2D42c9%2D8a77%2Dea3dbe51b7da
+https://lgcnscoltd551.sharepoint.com/Shared%20Documents/%E1%84%80%E1%85%AE%E1%86%A8%E1%84%80%E1%85%A1%E1%84%8F%E1%85%A9%E1%84%83%E1%85%B3%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%87%E1%85%A9.xlsx
 ```
 > 직접 입력시 "이 항목은 이 항목은 SharePoint 또는 OneDrive 파일에서 찾을 수 없습니다. **그래도 추가하시겠습니까?**"  <br>같은 경고문이 발생할 수 있습니다. **그래도 추가하시겠습니까?** 를 선택하여 Sharepoint 사이트를 등록합니다.
 <img width="1119" height="798" alt="image" src="https://github.com/user-attachments/assets/2bef70bb-0dc5-4f19-9cb1-fcbea62f9c73" />
@@ -73,7 +73,8 @@ https://m365cpi45255191.sharepoint.com/sites/CopilotAgentPoC/Shared%20Documents/
 
 > 찾아보기를 통해 파일을 선택할 경우
 <img width="1089" height="778" alt="image" src="https://github.com/user-attachments/assets/4cc5cb21-3ab4-4dfd-9885-d368b83d4ba9" />
-<img width="1107" height="791" alt="image" src="https://github.com/user-attachments/assets/2c544d73-e998-4900-b033-4cf4e15eeaa1" />
+<img width="1133" height="802" alt="image" src="https://github.com/user-attachments/assets/f16d6570-ef1b-4ef4-b272-3060006723c6" />
+
 <br><br>
 
 이후 참조자료의 이름과 설명을 아래와 같이 입력하고 **[에이전트에 추가]** 버튼을 클릭합니다.
