--- a/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -91,7 +91,7 @@ Power apps 페이지에 우측 상단의 **[+ 새 사용자 지정 커넥터]** 
 다음으로 커넥터 이름을 입력하고 **[계속]** 을 선택합니다.
 > **⚠️주의⚠️ 반드시 영어로 작성해야 합니다.**
 ```
-MOFA-CountryData
+MOFA-CountryData-[여러분의 이름을 입려해주세요]
 ```
 <img width="1486" height="765" alt="image" src="https://github.com/user-attachments/assets/3013ec84-fde6-457a-be92-a6223a44b21a" />
 <br> <br>
