Fix typo in connector name instruction

--- a/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -91,7 +91,7 @@ Power apps 페이지에 우측 상단의 **[+ 새 사용자 지정 커넥터]** 
 다음으로 커넥터 이름을 입력하고 **[계속]** 을 선택합니다.
 > **⚠️주의⚠️ 반드시 영어로 작성해야 합니다.**
 ```
-MOFA-CountryData-[여러분의 이름을 입려해주세요]
+MOFA-CountryData-[여러분의 이름을 입력해주세요]
 ```
 <img width="1022" height="587" alt="image" src="https://github.com/user-attachments/assets/0ccefb55-8df9-4db7-b7e7-e8d54f31e179" />
 
