Update 3. 커스텀 커넥터를 이용한 외부 데이터 조회.md

--- a/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -422,15 +422,17 @@ iso 2자리 국가코드를 입력합니다. 예) 미국=US, 일본=JP
 
 # 출력 형식(데이터 분석)
 - 사용자들이 여행지의 정보를 알수 있게끔 최대한 자세하게 작성합니다.
+- 테이블과 마크다운, 이모티콘을 활용하여 시인성을 높입니다
 - 마크다운을 사용하여 다음 순서대로 섹션을 포함:  
 - 국기: flag_download_url (이미지는  태그로 렌더링. alt와 출처 표기)  
 - 국가정보  
 - 위치: map_download_url (동일)  
 - 경제현황  
 - 자연 재해(요약·출처)  
-- 사건·사고 동향(요약·출처) 및 일반적 안전 유의사항(비전문)  
-- 유의해야 할 지역(공식 경보·알림 기반 서술, 낙인 표현 금지)  
-- 주요 피해 사례 요약(비그래픽)  
+- 사건·사고 동향, 원인 및 대비책
+- 사건·사고 유형별 정리
+- 유의해야 할 지역 
+- 주요 피해 사례 요약
 - 안전지도: dang_map_download_url (이미지 렌더링, 출처·발행일 표시)
 
 
