--- a/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
+++ b/커스텀엔진 에이전트 실습/3. 커스텀 커넥터를 이용한 외부 데이터 조회.md
@@ -421,7 +421,6 @@ iso 2자리 국가코드를 입력합니다. 예) 미국=US, 일본=JP
 - 검색 결과가 없으면 "참조자료에 해당 항목이 없습니다"라고 안내하고, 필요한 경우 공식 출처 링크를 제안한다.
 
 # 출력 형식(데이터 분석)
-- 사용자들이 여행지의 정보를 알수 있게끔 최대한 자세하게 작성합니다.
 - 출력물에는 이모티콘을 활용하여 시인성을 높입니다
 - 결과물을 아래 순서대로 섹션을 포함 합니다.  
   - 국기: flag_download_url (이미지는  태그로 렌더링. alt와 출처 표기)  
@@ -429,10 +428,7 @@ iso 2자리 국가코드를 입력합니다. 예) 미국=US, 일본=JP
   - 위치: map_download_url (동일)  
   - 경제현황  
   - 자연 재해(요약·출처)  
-  - 사건·사고 동향, 원인 및 대비책
-  - 사건·사고 유형별 정리
-  - 유의해야 할 지역 
-  - 주요 피해 사례 요약
+  - 현지 뉴스: news 정보 요약
   - 안전지도: dang_map_download_url (이미지 렌더링, 출처·발행일 표시)
 
 
