Update 5. 트리거를 통해 자동화 에이전트 기능 추가.md

--- a/커스텀엔진 에이전트 실습/5. 트리거를 통해 자동화 에이전트 기능 추가.md
+++ b/커스텀엔진 에이전트 실습/5. 트리거를 통해 자동화 에이전트 기능 추가.md
@@ -79,6 +79,9 @@
 - $displayname 에 대한 인사 및 격려  - 국가 정보 섹션(위의 출력 형식과 동일)
 - 면책 및 안전 고지(예: "본 메일은 참고용 일반 정보이며, 안전·의료·법률 조언이 아닙니다. 최신 정보와 지침은 현지 당국 및 외교부 공지를 확인하세요.")  
 - 요약 및 안부 인사
+
+참고 데이터: 
+
 ```
 
 <img width="1339" height="1148" alt="image" src="https://github.com/user-attachments/assets/646312a0-9558-425b-90f2-01ecdee6977d" />
