Update agent creation and instruction guidelines

--- a/코파일럿 스튜디오 워크샵/선언형 에이전트 만들기/1. 에이전트 생성 및 지침 작성.md
+++ b/코파일럿 스튜디오 워크샵/선언형 에이전트 만들기/1. 에이전트 생성 및 지침 작성.md
@@ -1,6 +1,6 @@
-# ✅ 효과적인 지침(Instructions)의 중요성과 작성법
+# ✅ 선언형 에이전트 생성 및 지침 작성
 
-## 🔍 왜 지침이 중요한가?
+## 시작하기전... 🔍 지침이 중요한가?
 - **에이전트의 행동을 결정하는 핵심 요소**: 지침은 Copilot이 어떤 작업을 수행하고 어떤 방식으로 응답할지를 정의합니다.
 - **사용자 경험 향상**: 명확하고 구체적인 지침은 정확한 답변과 일관된 결과를 제공합니다.
 - **보안 및 규정 준수 유지**: 지침을 통해 데이터 접근 범위와 처리 규칙을 명확히 설정할 수 있습니다.
