Update 1. 에이전트 생성 및 지침 작성.md

--- a/코파일럿 스튜디오 워크샵/선언형 에이전트 만들기/1. 에이전트 생성 및 지침 작성.md
+++ b/코파일럿 스튜디오 워크샵/선언형 에이전트 만들기/1. 에이전트 생성 및 지침 작성.md
@@ -1,6 +1,6 @@
 # ✅ 선언형 에이전트 생성 및 지침 작성
 
-## 시작하기전... 🔍 지침이 중요한가?
+## 🔍 시작하기전...  지침이 중요한가?
 - **에이전트의 행동을 결정하는 핵심 요소**: 지침은 Copilot이 어떤 작업을 수행하고 어떤 방식으로 응답할지를 정의합니다.
 - **사용자 경험 향상**: 명확하고 구체적인 지침은 정확한 답변과 일관된 결과를 제공합니다.
 - **보안 및 규정 준수 유지**: 지침을 통해 데이터 접근 범위와 처리 규칙을 명확히 설정할 수 있습니다.
@@ -30,3 +30,21 @@
 
 📌 참고 문서:  
 [Declarative Agent Instructions – Microsoft Docs](https://learn.microsoft.com/ko-kr/microsoft-365-copilot/extensibility/declarative-agent-tool-comparison)
+
+---
+
+# ✅ 실습
+---
+
+## 1. Copilot Studio 사이트 접속
+
+먼저 에이전트 생성을 위해 Copilot studio 사이트를 접속합니다. <br>
+사이트 링크 : [https://copilotstudio.preview.microsoft.com/](https://copilotstudio.preview.microsoft.com/)
+
+
+> Copilot studio는 2개의 사이트가 있습니다 <br>
+> 1. 일반 사이트: [copilotstudio.microsoft.co](https://copilotstudio.microsoft.com/environments/~personal/home)m - GA된 기능들만 제공하는 페이지 입니다. <br>
+> 2. 프리뷰 사이트: [copilotstudio.preview.microsoft.com](https://copilotstudio.preview.microsoft.com/environments/~personal/home) - GA되지 않은 신규 기능들도 테스트할 수 있는 사이트 입니다. <br>
+> 실습에서는 프리뷰 사이트를 기준으로 진행합니다.
+
+
