--- a/코파일럿 스튜디오 워크샵/코파일럿 스튜디오 Lite/실습#1 블로그 포스팅 에이전트 만듣기.md
+++ b/코파일럿 스튜디오 워크샵/코파일럿 스튜디오 Lite/실습#1 블로그 포스팅 에이전트 만듣기.md
@@ -1,19 +1,58 @@
 # ✅ 블로그 포스팅 에이전트 만들기
 
+이곳에서는 Copilot Studio Lite 환경에서 Sharepoint에 저장된 가전제품 정보, 인터넷 검색 결과를 활용하여
+블로그 포스팅 초안 작성 및 이미지를 생성해주는 선언형 에이전트를 빠르게 만들어 봅니다.
+
+<img width="2155" height="1263" alt="image" src="https://github.com/user-attachments/assets/85868a3c-67ca-457b-9313-e56911bb3525" />
 
 ---
 
-## 에이전트 이름
+# 실습
+
+## 1. Copilot Studio Lite 열기
+먼저 팀즈 또는 Microsoft 365 App에서 Copilot을 선택합니다.
+만약 보이지 않는 다면, 우측 패널에 ... 을 선택하여 Copilot을 검색하여 추가 또는 고정 합니다.
+
+<img width="1524" height="1013" alt="image" src="https://github.com/user-attachments/assets/4ef74115-3d00-4888-9524-d2e4d59b3ebe" />
+<br> <br> <br>
+Copilot 창이 보인다면 우측 패널에 에이전트를 선택, **에이전트 만들기** 를 클릭합니다.
+<img width="1524" height="1013" alt="image" src="https://github.com/user-attachments/assets/061eb23a-7b07-4958-8193-bf6ab606c85f" />
+
+에이전트 만들기를 클릭하면, 아래와 같이 Copilot Studio Lite 환경이 표시되며 이곳에서 선언형 에이전트를 생성할 수 있습니다.
+<img width="1524" height="1013" alt="image" src="https://github.com/user-attachments/assets/fc7f311f-e698-4abd-832b-2b958c1e7855" />
+
+<br> <br> 
+
+## 2. 에이전트 설정 입력 - 이름, 설명, 지침
+
+다음은 에이전트 설정을 입력합니다.
+Copilot Studio lite 환경에서 만드는 에이전트는 다음의 정보들이 입려되야 합니다.
+
+| 설 정 | 역        할 |
+| :------: | --- |
+|이름|사용자에게 표시되는 에이전트의 이름입니다|
+|설명|에이전트가 무엇인지 사용자에게 설명을 보여줍니다|
+|지침|**가장 중요!** 에이전트가 어떻게 동작해야하는지 AI에게 설명을 하는 부분입니다. 이곳에서 에이전트의 기능, 동작 플로우, 어조 등을 상세히 작성합니다. |
+|지식|에이전트가 사용자에게 답변을 하기위해 참조할 수 있는 데이터를 선택하는 부분입니다. 인터넷 서치, 메일, 채팅, 쉐어포인트 사이트 내 파일을 참조할 수 있습니다.|
+|기능|에이전트가 할 수 있는 추가 기능입니다. 현재는 이미지 생성과 코드 해석기를 활성화 할 수 있습니다. 코드해석기는 Python 코드를 실행하여 차트 생성, 데이터 분석, 파일 생성등의 기능을 제공합니다.|
+|추천<br>프롬<br>프트|사용자가 에이전트를 이용할 때 자주 사용할만한 프롬프트를 미리 표시해주는 편의성 기능입니다.|
+
+
+먼저 이름과, 설명, 지침을 아래의 정보로 입력합니다. <br> 
+효과적인 지침 작성 방법은 아래 링크를 참고합니다. <br> 
+링크: [선언적 에이전트에 대한 효과적인 지침 작성](https://learn.microsoft.com/ko-kr/microsoft-365-copilot/extensibility/declarative-agent-instructions) <br> 
+
+### 에이전트 이름
 ```
 ✅ 블로그 포스트 에이전트 - [여러분의 이름]
 ```
 
-## 에이전트 설명
+### 에이전트 설명
 ```
 인터넷, 쉐어포인트 자료를 참고해 블로그 포스트 작성, 초안 검토, 이미지 생성을 지원하는 에이전트 입니다
 ```
 
-## 지침
+### 지침
 ```
 ## 0) 역할
 당신은 사용자가 **블로그 포스트 작성·검토·이미지 생성·코드 해석**을 효율적으로 수행할 수 있도록 돕는 **선언형 에이전트**입니다.  
@@ -48,6 +87,10 @@
 - **성능·가독성 개선** 제안, 복잡도/시간복잡도 주석 보강
 - (확장) 실행 예시 입출력/테스트 케이스 초안, 보안 취약점 주의사항
 
+### 1.5 자료 검색(Enterprise Search)
+ - Sharepoint에 저장된 제품의 Specsheet를 찾아 제품 정보를 제공합니다.
+ - 현재 저장되어있는 제품 리스트를 테이블 형태로 제공
+ - 블로그 초안 작성을 위한 특정 제품 기술 정보 제공
 ---
 
 ## 2) 사용 지침
@@ -166,3 +209,11 @@
 ---
 
 ```
+
+## 3. 에이전트 설정 입력 - 지식, 기능, 추천 프롬프트
+
+
+
+## 4. 에이전트 게시 및 공유 - 지식, 기능, 추천 프롬프트
+
+
