Update 1. 에이전트 생성 및 기본 설정.md

--- a/코파일럿 스튜디오 워크샵/커스텀 에이전트 만들기-기초#1/1. 에이전트 생성 및 기본 설정.md
+++ b/코파일럿 스튜디오 워크샵/커스텀 에이전트 만들기-기초#1/1. 에이전트 생성 및 기본 설정.md
@@ -83,6 +83,7 @@
 
 입력할 정보는 다음과 같습니다.
 
+
 ### 에이전트 이름
 ```
 ✅ 블로그 포스트 에이전트 - [여러분의 이름]
@@ -256,9 +257,17 @@
 
 ---
 
-
 ```
 
+<br> <br> 
+
+입력을 모두 마치고 Save 버튼을 눌러 에이전트 기본 정보와 지침을 저장합니다.
+
+<img width="1504" height="1035" alt="image" src="https://github.com/user-attachments/assets/813f3b32-d16b-44d2-bea0-98473b152280" />
+
+
 ---
+**축하합니다!**
+
 에이전트의 기본 지침 설정이 완료되었습니다.
 다음은 에이전트가 이용할 참조자료와 도구를 추가하도록 합니다.
