--- a/코파일럿 스튜디오 워크샵/커스텀 에이전트 만들기-기초#2/2. 도구(커넥터) 추가.md
+++ b/코파일럿 스튜디오 워크샵/커스텀 에이전트 만들기-기초#2/2. 도구(커넥터) 추가.md
@@ -1,13 +1,13 @@
-에이전트에 도구 추가
+# 에이전트에 도구 추가
 ===
-✅ Copilot Studio에서 도구(Tool)의 역할
+## ✅ Copilot Studio에서 도구(Tool)의 역할
 
 **도구(Tool)** 는 Copilot이 기본적으로 할 수 없는 기능을 확장해주는 **추가 능력**입니다.  
 쉽게 말해, **Copilot을 단순한 대화형 AI에서 ‘업무 실행형 AI’로 업그레이드하는 핵심 요소**입니다.
 
 ---
 
-**1. 도구의 핵심 역할**
+## **1. 도구의 핵심 역할**
 |역할|설명|
 |------|---|
 |외부 서비스 연결|CRM, ERP, 데이터베이스, API 호출|
@@ -17,7 +17,7 @@
 
 ---
 
-**2. 왜 필요한가?**
+## **2. 왜 필요한가?**
 
 
 - Copilot은 기본적으로 **대화형 AI** → 데이터 조회나 시스템 명령 실행은 불가능  
@@ -25,7 +25,7 @@
 
 ---
 
-**3. 예시로 이해하기**
+## **3. 예시로 이해하기**
 
 - **도구 없음**  
   > “이번 주 매출 알려줘”  
@@ -37,7 +37,7 @@
 
 ---
 
-**4. 정리**
+## **4. 정리**
 
 
 ✔ 도구는 **Copilot의 기능을 확장**하는 핵심  
@@ -45,7 +45,7 @@
 ✔ **실제 비즈니스 프로세스 실행**을 가능하게 함  
 
 ---
-실습
+## 실습
 ===
 이번 실습에서는 에이전트가 사용자를 대신하여 조회된 정보를 추가적으로 문의하기 위해 담당자에게 메일을 발송해주기 위한 작업을 할 수 있도록 메일 발송 도구를 추가해 보겠습니다.
 
