Revise document for adding tools in Copilot Studio
Updated the document to focus on adding tools in Copilot Studio and removed previous content related to reference materials.

--- a/코파일럿 스튜디오 워크샵/커스텀 에이전트 만들기-기초#1/3. 도구 추가.md
+++ b/코파일럿 스튜디오 워크샵/커스텀 에이전트 만들기-기초#1/3. 도구 추가.md
@@ -1,15 +1,4 @@
-## 📚 Copilot Studio의 참조자료(Knowledge) 역할
-
-| 항목 | 설명 |
-|:------:|------|
-| **정의** | 에이전트가 답변을 생성할 때 참고할 수 있도록 연결된 문서, 웹페이지, 데이터 등 외부 정보 소스 |
-| **주요 기능** | 사용자 질문에 대해 **정확하고 근거 있는 답변**을 생성할 수 있도록 지원 |
-| **형식** | PDF, HTML, Word, Excel, 웹 링크 등 다양한 형식의 문서를 지원 |
-| **활용 예시** | - SharePoint에 저장된 매뉴얼 검색<br>- 내부 보고서 요약<br>- 통계 자료 기반 인사이트 제공 |
-| **중요성** | 참조자료가 없으면 에이전트는 일반적인 지식만으로 답변하며, **기업 맞춤형 정보 제공이 어려움** |
-| **설정 위치** | Copilot Studio의 **"Knowledge" 탭**에서 연결 가능 |
-
-<br> <br> 
+# 에이전트에 도구 추가#1 (MCP 커넥터)
 
 ## ✅ Copilot Studio에서 도구(Tool)의 역할
 
