Update 2. 참조 자료 추가.md

--- a/코파일럿 스튜디오 워크샵/커스텀 에이전트 만들기-기초#1/2. 참조 자료 추가.md
+++ b/코파일럿 스튜디오 워크샵/커스텀 에이전트 만들기-기초#1/2. 참조 자료 추가.md
@@ -1,1 +1,42 @@
+# 에이전트에 참조 자료 추가
+
+이번 실습은, 쉐어포인트에 미리 저장해둔 PDF형태의 데이터시트를 기반으로 에이전트가 답변을 할 수 있도록
+참조자료를 선언해 주도록 합니다.
+
+## 📚 Copilot Studio의 참조자료(Knowledge) 역할
+Copilot Studio에서 **참조자료(Knowledge)**는 에이전트가 기업 내부 문서나 외부 정보에 기반해 정확하고 신뢰할 수 있는 답변을 생성할 수 있도록 돕는 핵심 기능입니다.
+
+아래 표는 그 역할을 간단히 설명해주는 표 입니다.
+
+| 항목 | 설명 |
+|:------:|------|
+| **정의** | 에이전트가 답변을 생성할 때 참고할 수 있도록 연결된 문서, 웹페이지, 데이터 등 외부 정보 소스 |
+| **주요 기능** | 사용자 질문에 대해 **정확하고 근거 있는 답변**을 생성할 수 있도록 지원 |
+| **형식** | PDF, HTML, Word, Excel, 웹 링크 등 다양한 형식의 문서를 지원 |
+| **활용 예시** | - SharePoint에 저장된 매뉴얼 검색<br>- 내부 보고서 요약<br>- 통계 자료 기반 인사이트 제공 |
+| **중요성** | 참조자료가 없으면 에이전트는 일반적인 지식만으로 답변하며, **기업 맞춤형 정보 제공이 어려움** |
+| **설정 위치** | Copilot Studio의 **"Knowledge" 탭**에서 연결 가능 |
+
+<br> <br> 
+
+Copilot studio의 커스텀 엔진 에이전트에서는 Microsoft 365 내의 데이터 뿐만 아니라,
+다양한 데이터 소스에 저장되어 있는 정보를 참조자료로 활용하여 답변에 이용할 수 있습니다.
+
+## 📥 Copilot Studio에서 활용 가능한 참조자료(Knowledge) 데이터 소스 유형 요약
+| 카테고리 | 데이터 소스 | 설명 |
+|----------|--------------|------|
+| **문서 기반** | PDF, Word, Excel 등 업로드 파일 | Dataverse에 업로드 후 자동 색인화되어 검색 가능 |
+| **클라우드 저장소** | SharePoint, OneDrive | 조직 내 문서 저장소에서 직접 참조 가능 |
+| **웹 기반** | 공개 웹사이트 URL | Bing 검색을 통해 웹페이지 내용 참조 |
+| **엔터프라이즈 시스템** | ServiceNow, Salesforce, Confluence, ZenDesk 등 | 실시간 커넥터를 통해 외부 시스템의 지식 기반 또는 티켓 정보 참조 |
+| **테이블 데이터** | Dataverse 테이블 | 구조화된 테이블 데이터를 기반으로 질의 응답 가능 |
+| **API 기반** | 외부 HTTP API, YAML 정의 | OnKnowledgeRequested 트리거를 통해 실시간 API 호출 가능 |
+
+
+<img width="1023" height="742" alt="image" src="https://github.com/user-attachments/assets/b01a1a1c-75cd-46ec-9daa-015792a8f561" />
+<img width="1023" height="740" alt="image" src="https://github.com/user-attachments/assets/566c5a93-4c17-4a44-a229-35d3eb43ca51" />
+
+---
+
+## 실습
 
