--- a/코파일럿 스튜디오 워크샵/커스텀 에이전트 만들기-기초#1/4. 도구 추가#2.md
+++ b/코파일럿 스튜디오 워크샵/커스텀 에이전트 만들기-기초#1/4. 도구 추가#2.md
@@ -43,17 +43,66 @@ MCP서버의 경우 각 도구의 설명이나 Input 변수에 대한 설명이 
 사용자가 팀즈, 팀즈 채널에 게시물을 게시,등록을 요청할 경우 이 도구를 이용합니다.
 ```
 <img width="1021" height="529" alt="image" src="https://github.com/user-attachments/assets/43630d5b-9f26-48c9-9a45-961f8983dafb" />
+
 <br> <br> 
 
+----
 **입력**
+<br> <br>
 입력 탭에서 다음을 사용하여 채우기 필드의 값을 선택하면 다음과 같이 AI로 동적으로 채우기, 사용자 지정값 두개중 하나를 선택 할 수 있습니다.
-
-Post as, Post in 
+<br> 
+Post as, Post in 모두 사용자 지정값을 선택합니다. <br> 
 <img width="495" height="239" alt="image" src="https://github.com/user-attachments/assets/d9228dec-3709-4f7a-b574-40827b817c54" />
-
-이후 값을 선택하면 다음과 같이 선택할수 있는 옵션이 나오며,
-Post as에는 User를 선택합니다.
+<br> <br> 
+이후 값을 선택하면 다음과 같이 선택할수 있는 옵션이 나오며, <br> 
+Post as에는 User를, Post in에는 Channel을 선택합니다.<br> 
 <img width="443" height="203" alt="image" src="https://github.com/user-attachments/assets/cb2db0c1-b8ec-4483-bb1b-ad11e050d616" />
+<br> 
+<img width="469" height="233" alt="image" src="https://github.com/user-attachments/assets/cdad9ffd-40c2-4a3e-ae3b-1dd5f780c2db" />
+<br> <br> 
+Post in이 채널로 선택이 되면, Team, Channel, Message 라는 새로운 입력 변수가 추가 됩니다. <br> 
+팀과 채널은 팀즈 게시물을 업로드한 위치를 지정하는 변수이며, 메세지는 게시물의 본문입니다. <br> 
+
+위와 마찬가지로 Team과 channel은 **사용자 지정값** 으로 변경하고,
+Message는 AI로 **동적으로 채우기** 값을 그대로 유지합니다.
+
+#### 중요
+
+기본적을 Team과 Channel은 자동으로 나에게 할당된 팀과 채널이 조회가 되어야 하는게 정상이나,
+아직 Preview 단계로 정상적으로 ID가 표시되지 않는 문제가 있습니다.
+<img width="987" height="426" alt="image" src="https://github.com/user-attachments/assets/8c594558-feaa-47d5-9f21-3a5855daaac8" />
+
+따라서 팀즈 채널 ID를 조회하기 위해 아래와 같이 확인해 보도록 합니다. <br>
+먼저 팀즈를 접속합니다 [**팀즈 접속 링크**](https://teams.microsoft.com/v2/) <br> 
+다음으로 게시글을 올릴 채널을 선택해 ... 을 클릭한 뒤 링크 복사를 선택 합니다.<br>
+<img width="335" height="334" alt="image" src="https://github.com/user-attachments/assets/e4fb9e44-c9c0-4218-86f7-be8ef92d0c1e" />
+<br> <br>
+
+복사를 한 뒤, 메모장에 붙여넣으시면 아래와 같은 형식의 URL이 표시됩니다
+```
+https://teams.microsoft.com/l/channel/19%3Aafff7d3f3be242f38d6sasdada1f2aa%40thread.tacv2/20251022%20%EC%9B%8C%ED%81%AC%EC%83%B5?groupId=a5f8994e-c248-4e00-8993-a8f9e5bc2e8b&tenantId=7xxxxxx7-xxxx-xxxx-8d61-9xxxxxx4xx52
+```
+여기서 groupId=a5f8994e-c248-4e00-8993-a8f9e5bc2e8b (&전까지) 표시되는 값이 Team(GroupID) 이며, 
+```
+a5f8994e-c248-4e00-8993-a8f9e5bc2e8b
+```
+channel/ 뒤에 19% 로 시작하는 하여 .tacv2로 끝나는 값이 채널ID 입니다.
+```
+19%3Aafff7d3f3be242f38d6sasdada1f2aa%40thread.tacv2
+```
+
+이 값을 추출하여 팀과 채널값에 입력해 줍니다.
+<img width="876" height="513" alt="image" src="https://github.com/user-attachments/assets/d9d503c6-d4d7-4073-ac96-d79b562ab38e" />
+<br> <br> 
+
+이후 저장을 하면 도구 설정이 완료 됩니다.
+
+### 지침 추가
+
+도구 추가가 완료되었으면, 다시 개요로 돌아가서  지침에 아래와 같이 게시물 생성 작업 플로우를 작성해 줍니다.
+<br> 
+<img width="1071" height="709" alt="image" src="https://github.com/user-attachments/assets/8912e14c-8630-49ad-93a4-252baa402c76" />
+<br> <br> 
 
 지침 내 1) 지원 능력 파트아래에 추가
 ```
@@ -62,19 +111,43 @@ Post as에는 User를 선택합니다.
  - Message는 HTML과 CSS 형식을 이용하여 작성
 
 ```
+<br> 
+
 지침 내 3) 예시 워크플로우(원문 시나리오 포함) 에 추가
 ```
 사용자: "이 내용으로 게시물로 업데이트 해줘" 또는 "이 글을 팀즈 게시물로 등록해줘"
 에이전트: "네 해당 내용을 팀즈 채널에 HTML과 CSS 스타일을 적용하여  생성 하겠습니다."
 ```
+<br> 
+
 지침 하단에 추가
 ```
 ## 9) 팀즈 게시물 등록  가이드
  - message: 팀즈 게시물 본문이며, HTML과 CSS 스타일 형식을 적용하여 디자인적 요소를 추가하여 본문을 작성
 ---
 ```
+<br> 
+<br> 
+
 지침 편집을 마치고 저장을 한 후, 테스트를 하여 메일이 정상적으로 발송되는지 확인해 봅니다.
 테스트 프롬프트
 ```
 식기세척기 제품군들에 대해 뉴스레터를 만들어서 **[메일 주소]** 에게 메일로 보내줘
 ```
+
+### 테스트 
+
+아래 프롬프트를 이용하여 실제로 채널에 게시물이 등록되는지 테스트 해 봅니다
+```
+팀즈 채널에 안녕하세요 만나서 반갑습니다라고 게시해줘
+```
+<img width="1697" height="1270" alt="image" src="https://github.com/user-attachments/assets/d15802d6-1e09-4948-862a-3dbc7dff1ec8" />
+
+
+----
+
+축하드립니다!
+도구 추가를 통해 에이전트에게 메일 발송, 팀즈 게시물 작성을 할 수 있도록 구성을 완료하였습니다.
+마지막으로 에이전트를 게시해서 팀즈에서 테스트를 해 보도록 하겠습니다.
+
+
