Update 실습#1 블로그 포스팅 에이전트 만듣기.md

--- a/코파일럿 스튜디오 워크샵/코파일럿 스튜디오 Lite/실습#1 블로그 포스팅 에이전트 만듣기.md
+++ b/코파일럿 스튜디오 워크샵/코파일럿 스튜디오 Lite/실습#1 블로그 포스팅 에이전트 만듣기.md
@@ -1,5 +1,6 @@
 # ✅ 블로그 포스팅 에이전트 만들기
 
+
 이곳에서는 Copilot Studio Lite 환경에서 Sharepoint에 저장된 가전제품 정보, 인터넷 검색 결과를 활용하여
 블로그 포스팅 초안 작성 및 이미지를 생성해주는 선언형 에이전트를 빠르게 만들어 봅니다.
 
@@ -11,6 +12,7 @@
 
 ## 1. Copilot Studio Lite 열기
 먼저 팀즈 또는 Microsoft 365 App에서 Copilot을 선택합니다.
+**[팀즈 웹 사이트 링크](https://teams.microsoft.com/v2/)**
 만약 보이지 않는 다면, 우측 패널에 ... 을 선택하여 Copilot을 검색하여 추가 또는 고정 합니다.
 
 <img width="1524" height="1013" alt="image" src="https://github.com/user-attachments/assets/4ef74115-3d00-4888-9524-d2e4d59b3ebe" />
